(preview notifications) Fix margin so box-shadow is not cut off

--- a/client/src/elements/item-preview/item-preview.css
+++ b/client/src/elements/item-preview/item-preview.css
@@ -41,8 +41,10 @@ item-preview {
 
 .item-preview__notification {
   width: 180px;
+  margin-top: calc(var(--q-space-base) / 2);
+  margin-bottom: calc(var(--q-space-base) / 2);
 }
 
 .item-preview__notification notification {
-  margin-bottom: calc(var(--q-space-base) * 2);
+  margin-bottom: calc(var(--q-space-base) * 3);
 }
